# OptimisationM2AIC

./: .gitignore  CMakeLists.txt  README.md  install.sh  run.sh
src/: example_experiment.c  example_experiment.cpp  main.cpp  utils.cpp  utils.h
src/algo/: SA_ES.cpp  SA_ES.h
src/utils/: utils.cpp  utils.h
